network info fix + other fixes

--- a/FyneApp.toml
+++ b/FyneApp.toml
@@ -1,6 +1,6 @@
 [Details]
   Icon = "Icon.png"
-  Name = "Kira Manager 2.0"
+  Name = "Kensho"
   ID = "testID.app"
   Version = "0.0.1"
   Build = 4
